--- a/tweet/public/index.html
+++ b/tweet/public/index.html
@@ -7,7 +7,7 @@
   
    
     <title>React App</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     
   </head>
   <body>
